Completed systems for creating a category, including data layer Fixed error in table structure Moved some code to different files to improve readability

--- a/src/main/resources/css/common.css
+++ b/src/main/resources/css/common.css
@@ -352,7 +352,7 @@ table {
  }
 
  /*========== Util Form CSS ==========*/
-.util_form {
+.util_page {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -367,16 +367,24 @@ table {
   box-shadow: 0px 0px 10px #c0c0c0;
 }
 
-.util_form label {
-  margin: 0px 0px 0px 5%;
+.util_form {
+  width: 90%;
+  margin: 5%;
+}
+
+.util_form h2, .util_form p {
+  font-size: large;
+  border-bottom: 2px solid var(--grey-1);
+  margin: 20px 0px;
+  padding-bottom: 5px;
 }
 
 .util_form button, .util_form select, .util_form input[type=text] {
-  width: 90%;
+  width: 100%;
   border-radius: 15px;
   text-align: left;
   height: 50px;
-  margin: 5px 5% 25px 5%;
+  margin: 5px 0px 25px 0px;
   background-color: var(--background-colour);
   border: 3px solid var(--background-colour);
   font-size: medium;
@@ -397,13 +405,11 @@ table {
   float: right;
 }
 
-
 .util_form input {
   padding-left: 5px;
 }
 
-
-.util_form.visible {
+.util_page.visible {
   display: block;
 }
 
@@ -452,4 +458,14 @@ button.clicked {
   color: #FFFFFF;
   transition: 0.8s;
   text-align: center;
+}
+
+/*========== Error CSS ==========*/
+#category_error {
+background-color: var(--red-accent);
+}
+
+#category_error h2, #category_error p {
+border: none;
+padding: 5px;
 }
